Добавлен заголовок страницы с классом badge

--- a/Pages/_Host.cshtml
+++ b/Pages/_Host.cshtml
@@ -14,6 +14,7 @@
     <base href="~/" />
     <link id="my" href="../bootstrap/css/bootstrap.min.css" rel="stylesheet" />
     <link href="../font-awesome/css/all.min.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300;400;600;900&display=swap" rel="stylesheet">
 </head>
 <body class="bg-light text-dark">
     <component type="typeof(App)" render-mode="ServerPrerendered" />
